# ondeviceML-project

./: .gitignore  README.md  pyproject.toml  readme.md  results.txt  test.py
models/: yolo.py
runs/Sep16_19-36-39_model-tts-v1/: events.out.tfevents.1726515399.model-tts-v1.2306844.0
runs/Sep16_19-38-01_model-tts-v1/: events.out.tfevents.1726515481.model-tts-v1.2307041.0
runs/Sep16_19-39-53_model-tts-v1/: events.out.tfevents.1726515593.model-tts-v1.2307382.0
runs/Sep16_19-40-08_model-tts-v1/: events.out.tfevents.1726515608.model-tts-v1.2307541.0
runs/Sep16_19-40-22_model-tts-v1/: events.out.tfevents.1726515622.model-tts-v1.2307597.0
runs/Sep16_19-41-42_model-tts-v1/: events.out.tfevents.1726515702.model-tts-v1.2307824.0
runs/Sep16_20-10-16_model-tts-v1/: events.out.tfevents.1726517416.model-tts-v1.2312331.0
runs/Sep16_20-12-30_model-tts-v1/: events.out.tfevents.1726517550.model-tts-v1.2312715.0
runs/Sep16_20-13-51_model-tts-v1/: events.out.tfevents.1726517631.model-tts-v1.2312910.0
runs/Sep16_20-15-09_model-tts-v1/: events.out.tfevents.1726517709.model-tts-v1.2313144.0
runs/Sep16_20-20-41_model-tts-v1/: events.out.tfevents.1726518041.model-tts-v1.2314012.0
runs/Sep16_20-20-59_model-tts-v1/: events.out.tfevents.1726518059.model-tts-v1.2314043.0
runs/Sep16_20-22-02_model-tts-v1/: events.out.tfevents.1726518122.model-tts-v1.2314237.0
runs/Sep16_20-57-14_model-tts-v1/: events.out.tfevents.1726520234.model-tts-v1.2320051.0
runs/Sep16_20-58-09_model-tts-v1/: events.out.tfevents.1726520289.model-tts-v1.2320222.0
utils/: datasets.py  utils.py
(+16 files in other folders)
