[tool.poetry]
name = "odml-proj"
version = "0.1.0"
description = ""
authors = ["Oyeon <data0311@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.1"
tensorboard = "^2.18.0"
opencv-python = "^4.10.0.84"
pillow = "^10.4.0"
tqdm = "^4.66.5"
matplotlib = "^3.9.2"
torchvision = "^0.19.1"
pyyaml = "^6.0.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
